--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -32,7 +32,6 @@
                                         Password</a></li>
                                 <li><a (click)="logout()" class="text-white text-center my_account">Logout</a>
                                 </li>
-                                <li><a href="#" class="text-white text-center my_messages">Messages</a></li>
                             </ul>
                         </div>
                     </div>
@@ -175,14 +174,12 @@
                                 <a  class="text-white float-left text-center">Total</a>
                                 <a class="text-white float-right text-center">GuestList</a>
                             </div>
-                            <h3 class="number text-white text-center"><a><img
-                                        src="/assets/images/search.png"></a><a><img
-                                        src="/assets/images/download.png"></a> Share point. 412</h3>
+                            <h3 class="number text-white text-center"><a></a><a></a></h3>
                             <div class="inner_box_content">
                                 <div class="scrollbar-rail scroll_content">
                                     <div class="five_border">
                                         <div class="inner_title">
-                                            <h3 class="text-white"><span>TA</span> Tolani Aso Ebi</h3>
+                                            <h3 class="text-white">Guest List</h3>
                                         </div>
                                         <div class="gender_list text-white" *ngFor="let list of allGuestList">
                                             <div class="list1">
