--- a/src/app/guest-event/guest-event.component.html
+++ b/src/app/guest-event/guest-event.component.html
@@ -1,4 +1,4 @@
-<!-- Event details for guest which invited by celebrants -->
+<!-- 
 <div id="loading">
     <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
 </div>
@@ -80,4 +80,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
