--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -162,8 +162,8 @@
                                 <div class="col-12">
                                     <div class="thanx_write text-white">
                                         <p>Thank you for being here. Planning on getting
-                                            us a present - we are gestated. Gifts will not
-                                            be accepted on the wedding day, however, put
+                                            us a present - we are greatfull. Gifts will not
+                                            be accepted on the wedding day, however,
                                             financial gift is very much appreciated.</p>
                                     </div>
                                 </div>
