--- a/src/app/event-activity/event-activity.component.html
+++ b/src/app/event-activity/event-activity.component.html
@@ -99,7 +99,7 @@
                                 <p class="text-white">{{item.activityName}}</p>
                             </div>
                         </span>
-                        <div class="collect1_img" (click)="totalCollection(singleEventDetails._id)"  *ngIf="isCelebrant">
+                        <div class="collect1_img" (click)="totalCollection(singleEventDetails._id)" *ngIf="isCelebrant">
                             <div class="collect_img">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
@@ -107,7 +107,7 @@
                             <p class="text-center text-white">Collected</p>
                         </div>
                         <div class="collect1_img" *ngIf="isCelebrant">
-                            <div class="collect_img" (click)="nextSection('seventhStep', 'initialStep')">
+                            <div class="collect_img" (click)="editEvent(eventId)">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
@@ -148,80 +148,6 @@
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
                             <p>Select Bank Account</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-</div>
-<div class="seventhStep" style="display:none">
-    <section class="edit_event_section d-flex flex-wrap align-content-center">
-        <div class="container-fluid">
-            <h3 class="text-center">Aso Ebi</h3>
-            <div class="edit_event">
-                <div class="event_inner_content_box">
-                    <div class="event_inner_content ">
-                        <div class="new_event_sec edit_event_new">
-                            <div class="row">
-                                <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                                    <a><img src="/assets/images/edit_event_icon.png">
-                                        <p class="text-white">New Event</p>
-                                    </a>
-                                </div>
-                                <div class="col-9 p-0">
-                                    <span class="text-white event_name"> Hello {{userName}} </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="overlay" class="new_event_menu_box" style="display: none;">
-                            <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
-                                <a class="text-white "><img src="/assets/images/overlay.png">
-                                    <p>New Event</p>
-                                </a>
-                            </div>
-                            <div class="">
-                                <div class="event_menu">
-                                    <div class="all_menu_content  d-flex flex-wrap align-content-center">
-                                        <ul>
-                                            <li><a href="eventA.html" class="text-white new_event">my event</a></li>
-                                            <li><a href="new_event_slider.html" class="text-white my_event">new
-                                                    event</a>
-                                            </li>
-                                            <li><a href="add_bank_account.html" class="text-white my_account">bank
-                                                    account</a>
-                                            </li>
-                                            <li><a href="reset_password.html" class="text-white my_account">Reset
-                                                    Password</a>
-                                            </li>
-                                            <li><a href="#" class="text-white my_account">Logout</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div *ngIf="singleEventDetails">
-                            <div class="enter_event_title">
-                                <h6 class="text-center text-white">Event Hashtag</h6>
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" id="title" [(ngModel)]="eventHashtag"
-                                            placeholder="# Enter your event hashtag here.." name="title">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="edit_event_btn">
-                                <div class="row">
-                                    <div class="col-sm-6 col-xs-12 edit_info"
-                                        (click)="editEventDeatils(singleEventDetails._id)">
-                                        <a class="edit_btn text-white  text-center">Edit Information </a>
-                                    </div>
-                                    <div class="col-sm-6 delete_info col-xs-12"
-                                        (click)="deleteEvent(singleEventDetails._id)">
-                                        <a class="delete_event_btn text-center">Delete Event</a>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
