--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -25,11 +25,18 @@
                                 <div class="event_menu">
                                     <div class="all_menu_content  d-flex flex-wrap align-content-center">
                                         <ul>
-                                            <li><a href="eventA.html" class="text-white new_event">My Event</a></li>
-                                            <li><a href="new_event_slider.html" class="text-white my_event">New Event</a></li>
-                                            <li><a href="add_bank_account.html" class="text-white my_account">bank account</a></li>
-                                            <li><a href="reset_password.html" class="text-white my_account">Reset Password</a></li>
-                                            <li><a href="#" class="text-white my_account">Logout</a></li>
+                                                <li><a routerLink="/home" class="text-white text-center my_account">Home</a></li>
+                                            <li><a routerLink="/myEvent" class="text-white text-center new_event">my
+                                                event</a>
+                                        </li>
+                                        <li><a routerLink="/createEvent" class="text-white text-center my_event">new
+                                                event</a></li>
+                                        <li><a routerLink="/bankDetails" class="text-white text-center my_account">bank
+                                                account</a>
+                                        </li>
+                                        
+                                        <li><a (click)="logout()" class="text-white text-center my_account">Logout</a>
+                                        </li>
                                         </ul>
                                     </div>
                                 </div>
