--- a/src/app/thank-you-message/thank-you-message.component.html
+++ b/src/app/thank-you-message/thank-you-message.component.html
@@ -37,7 +37,7 @@
                                     </a>
                                 </div>
                                 <div class="col-9 p-0">
-                                    <span class="text-white event_name"> Hello Rao Info Tech </span>
+                                    <span class="text-white event_name" *ngIf="userName"> Hello {{userName}} </span>
                                 </div>
                             </div>
                         </div>
@@ -46,17 +46,31 @@
                                 <div class="event_menu">
                                     <div class="all_menu_content  d-flex flex-wrap align-content-center">
                                         <ul>
-                                            <li><a class="text-white new_event">My Event</a></li>
-                                            <li><a class="text-white my_event">New Event</a></li>
-                                            <li><a class="text-white my_account">bank account</a></li>
-                                            <li><a class="text-white my_account">Reset Password</a></li>
-                                            <li><a class="text-white my_account">Logout</a></li>
-                                            <li><a class="text-white my_account">Messages</a></li>
+                                                <li><a routerLink="/home" class="text-white text-center my_event">Home</a></li>
+                                            <li><a routerLink="/myEvent" class="text-white text-center new_event">my
+                                                    event</a>
+                                            </li>
+                                            <li><a routerLink="/createEvent" class="text-white text-center my_event">new
+                                                    event</a></li>
+                                            <li><a routerLink="/bankDetails"
+                                                    class="text-white text-center my_account">bank
+                                                    account</a>
+                                            </li>
+                                            <li><a routerLink="/reset-password"
+                                                    class="text-white text-center my_account">Reset
+                                                    Password</a></li>
+                                            <li><a (click)="logout()"
+                                                    class="text-white text-center my_account">Logout</a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="thank-you-close">
+                        <button (click)="closeThnakyou()" class="float-right"><i class="fa fa-times"
+                                aria-hidden="true"></i></button>
                     </div>
                     <form [formGroup]="thankyouMessageForm" autocomplete="off" class="join_form forgot_pwd_form mt-3">
                         <div class="form-group">
@@ -88,13 +102,22 @@
             <div class="thanks_sec1">
                 <div class="Join_inner_content_box">
                     <div class="inner_content_btn">
+                        <div class="thank-you-plus">
+                            <button (click)="addThnakyou()" class="float-right"><i class="fa fa-plus"
+                                    aria-hidden="true"></i></button>
+                        </div>
                         <div class="thankyou_msg m-auto">
-                            <div class="thankyou_img text-center" *ngIf="thankYouMessage" style="background-image: url('http://192.168.1.83/AsoEbi-2/server/uploads/attachment-1567849467867')">
-                                <div class="all_msg">
-                                    <p class="text-center thankyou_font">Thank You</p>
-                                    <p class="text-center thankyou_font_msg">{{thankYouMessage.message}}</p>
-                                </div>
+                            <div class="thankyou_img text-center">
+                                <img src="{{path}}{{eventTheme}}" height="200" class="float-right"
+                                    *ngIf="thankYouMessage">
+                                <img src="/assets/images/profile_photo.png" *ngIf="!thankYouMessage">
                             </div>
+                        </div>
+                        <div class="all_msg">
+                            <!-- <p class="text-center thankyou_font">Thank You</p> -->
+                            <p *ngIf="!thankYouMessage" class="text-center thankyou_font">Sorry you have no message</p>
+                            <p class="text-center thankyou_font_msg" *ngIf="thankYouMessage">
+                                {{thankYouMessage.message}}</p>
                         </div>
                     </div>
                 </div>
@@ -102,3 +125,5 @@
         </div>
     </section>
 </div>
+
+<!-- [ngStyle]="{background:thankYouMessage ?  getSrc(thankYouMessage.attachment) : '/assets/images/profile_photo.png'}" -->
