--- a/src/app/view-event/view-event.component.css
+++ b/src/app/view-event/view-event.component.css
@@ -22,6 +22,8 @@ button.joinNowBtn {
   font-size: 30px;
   padding: 5px 0px;
   margin: 10px 0px;
+  border-radius: 0px;
+  color: #ffffff;
 }
 
 button.joinNowBtn:hover {
